// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          disabled={true}
          placeholder=" "
          type="time"
          value="Text"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hZdYhu"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hQdAiF"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja keyXuD"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder=" "
          readOnly={true}
          type="time"
          value="Read only text"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dlnBVE"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja kAEOL"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gdfmja keWwLn"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gdfmja fvBgJY"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja dlkXem"
          dir="rtl"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-bsixGQ duuJYT"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <input
        className="sc-gdfmja dlnBVE"
        placeholder="medium"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <input
        className="sc-gdfmja kAEOL"
        placeholder="large"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja fbVpNI"
          placeholder="xlarge"
          type="time"
        />
        <label
          className="sc-bsixGQ ioewyE"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja dMgTdD"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hxodLc"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF hgXxgX"
      >
        <input
          className="sc-gdfmja iBwDpR"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
